<resources>
    <string name="app_name">Simon</string>
    <string name="red_button_text">Red</string>
    <string name="blue_button_text">Blue</string>
    <string name="green">Green</string>
    <string name="green_button_text">Green</string>
    <string name="yellow_button_text">Yellow</string>
    <string name="start_button_text">Start</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="regular">Regular</string>
    <string name="hard">Hard</string>
    <string name="ultra">Ultra</string>
    <string name="play">Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_score">Your Score</string>
    <string name="scoreplaceholder">scorePlaceholder</string>
    <string name="new_game">New Game</string>

</resources>
