<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/difficultySelection">
        <RadioButton
                android:text="@string/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/easyButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/regularButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/hardButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/ultra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ultraButton" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/difficultySelection" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@color/buttonColor"/>

    <LinearLayout
            android:id="@+id/testContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
