<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/red_button_text"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:id="@+id/redButton" app:layout_constraintEnd_toStartOf="@+id/blueButton"
            style="@style/AppTheme.redButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/yellowButton"/>

    <Button
            android:text="@string/blue_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueButton" app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.blueButton"
            app:layout_constraintStart_toEndOf="@+id/redButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/greenButton"/>
    <Button
            android:text="@string/green_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greenButton" app:layout_constraintStart_toStartOf="parent"
            style="@style/AppTheme.greenButton"
            app:layout_constraintEnd_toStartOf="@+id/yellowButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redButton"/>
    <Button
            android:text="@string/yellow_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellowButton" app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.yellowButton"
            app:layout_constraintStart_toEndOf="@+id/greenButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blueButton"/>
    <Button
            android:text="@string/start_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/yellowButton"
            android:background="@color/buttonColor"/>
</android.support.constraint.ConstraintLayout>