<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ScoreViewFragment" android:id="@+id/frameLayout">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:text="@string/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/yourScoreTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/scoreplaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playerScoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:clickable="false" />
    <Button
            android:text="@string/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newGameButton"
            android:background="@color/buttonColor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/playerScoreTextView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>